add monthlyInvestmentResults